@@ -1,3 +1,7 @@
+19/02/2020:
+	- Added CORS headers to both Zoomify and Deepzoom XML info files
+
+
 18/02/2020:
 	- Added capture resolution info from JPEG2000 images when using Kakadu
 
